# myai

./: .$myai.drawio.bkp  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Think.sln  Think.vcxproj  Think.vcxproj.filters  myai.code-workspace  myai.dev  myai.drawio  myai.layout  myai.sln  myproject.sln  myproject.vcxproj  正则表达式.txt
.fleet/: run.json  settings.json
cmake/: initialize_module.cmake  utils.cmake
include/: asyn.h  config.h  log.h  timer.h
lib/: my_lib.lib
my-ai/: CMakeLists.txt  my-ai.cpp  my-ai.h
my-ai/core/: myai_node_dao.cpp  myai_thinker.cpp
my-ai/io/: myai_io_interface.h
my-lib/: CMakeLists.txt  main.cpp  mylib_def.h
my-lib/config/: config_val.h  configer.h
my-lib/converter/: converter.h  ymal_converter.h
myai/: .editorconfig  CMakeLists.txt  my-ai.cpp  my-ai.h  myai.h  myai.vcxproj  myai.vcxproj.filters  node.cpp  node.h  run.cpp  thinker.cpp  thinker.h  type.h
myai/config/: define.h  macro.h
myai/core/: myai_controller.cpp  myai_id_allocator.cpp  myai_node.h
myai/link/: Link.cpp  Link.h  LinkService.cpp  LinkService.h
myai/node/: Node.cpp  Node.h  NodeDao.cpp  NodeDao.h  NodeFactory.cpp  NodeFactory.h  NodeFormatter.h  NodeIdAllocator.h
myai/src/: node.cpp  node.h  thinker.cpp  thinker.h
myai/test/: test_base.cpp  test_think.cpp
myai/thinker/: ActivateNode.cpp  ActivateNode.h  Activator.cpp  Activator.h  Thinker.h  ThinkerController.h
mylib/: CMakeLists.txt  asyn.cpp  config.h  dbc.cpp  log.cpp  log.h  main.cpp  mylib.vcxproj  mylib.vcxproj.filters  mylib_def.h  packages.config  test_asyn.cpp  test_base.cpp  test_log.cpp  timer.cpp
mylib/asyn/: asyn.cpp
mylib/config/: ConfigValue.cpp  ConfigValue.h  Configer.cpp  Configer.h  config.cpp  config.h  config_manager.cpp  config_manager.h  config_val.cpp  config_val.h
mylib/converter/: converter.h  ymal_converter.h
mylib/database/: dbc.cpp
mylib/define/: type.h
mylib/format/: format.h
mylib/log/: LogEvent.cpp  LogEvent.h  LogFormatter.cpp  LogFormatter.h  Logger.cpp  Logger.h  log.cpp  log.h  log_appender.cpp  log_appender.h  log_event.cpp  log_event.h  log_formatter.cpp  log_formatter.h  logger.cpp  logger.h  logger_manager.cpp  logger_manager.h
mylib/src/: asyn.cpp  asyn.h  config.cpp  dbc.h  log.cpp  log.h  timer.cpp
mylib/test/: test_asyn.cpp
mylib/untils/: until.h
mytest/: CMakeLists.txt  test.cpp  test.h  test_asyn.cpp  test_base.cpp  test_log.cpp  test_think.cpp
mytest/my-lib-test/: test_config.cpp
mytest/mylib_test/: mylib_test.h  test_config.h  test_log.h  test_untils.h
old/: _link.cpp  _link.h  _myai.cpp  _myai_controller.h  _myai_factory.cpp  _myai_node.h  (+10 more)
src/: CMakeLists.txt  IOManage.h  MyaiDefine.h  ThinkBasis.h  ThinkCore.h  define.h  main.cpp  main.h  myai.vcxproj  myai.vcxproj.filters  node.cpp  node.h  src.vcxproj  src.vcxproj.filters
src/asyn/: Coroutine.cpp  Coroutine.h  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h
src/config/: Config.cpp  Config.h  Configer.cpp  Configer.h
src/control/: DriverManager.cpp  DriverManager.h  MyaiController.cpp  MyaiController.h  MyaiMainWindow.cpp  MyaiMainWindow.h  main.cpp
src/core/: Edge.cpp  Edge.h  IOControl.h  IdAllocator.cpp  IdAllocator.h  MyaiController.cpp  MyaiController.h  MyaiDao.cpp  MyaiDao.h  MyaiFileIO.cpp  MyaiFileIO.h  MyaiNode.cpp  MyaiNode.h  MyaiService.cpp  MyaiService.h  Node.cpp  Node.h  NodeDao.cpp  NodeDao.h  NodeFactory.cpp  NodeFactory.h  NodeIdAllocator.cpp  NodeIdAllocator.h  Noder.cpp  Noder.h  NoderManager.cpp  NoderManager.h  ThinkControl.cpp  ThinkControl.h  ThinkSystem.h  define.h  main.cpp  node.cpp  node.h
src/dao/: LinkStream.cpp  LinkStream.h  MyaiDao.cpp  MyaiDao.h  MyaiFileIO.cpp  MyaiFileIO.h
src/dbc/: Connection.cpp  Connection.h  Driver.cpp  Driver.h  Statement.cpp  Statement.h
src/driver/: Driver.cpp  Driver.h  DriverManager.cpp  DriverManager.h  MemoryDriver.h  MyaiDriver.cpp  MyaiDriver.h  MyaiDriverManager.cpp  MyaiDriverManager.h  StatusDriver.cpp  StatusDriver.h
src/entity/: Define.h  Edge.cpp  Edge.h  Emotion.h  Link.cpp  Link.h  MyaiNode.h  Node.cpp  Node.h  NodeInfo.h  ThinkControl.h  ThinkNode.h
src/entity/link/: LinkContainer.h  LinkElement.h  LinkSet.h
src/header/: 0_include.h  0_range.h  0_think_enum.h  0_think_type.h  1_link_list.h  1_node.h  1_node_info.h  1_think_enum.h  1_think_type.h  2_id_allocator.h  2_io_node.h  2_think_idalloc.h  3_io_manage.h  3_think_io.h  3_think_manage.h  4_think_core.h  data_manage.h  data_type.h  include.h  range.h  system_io.h  system_manage.h  think_core.h  think_io.h  type_node.h  type_node_id.h
src/header/system/: allocator.h  inout.h  manage.h  system_allocator.h  system_core.h  system_io.h  system_manage.h
src/header/system/system_manage/: system_manage_const.h  system_manage_dynamic.h  system_manage_static.h
src/header/type/: _except.h  type_except.h  type_node.h  type_node_id.h  type_range.h
src/io/: FileSystem.h  Serialization.h  ThinkIO.h
src/log/: LogAppender.cpp  LogAppender.h  LogEvent.cpp  LogEvent.h  LogFormatter.cpp  LogFormatter.h  Logger.cpp  Logger.h  LoggerManager.cpp  LoggerManager.h
src/service/: Driver.cpp  Driver.h  IdAllocator.cpp  IdAllocator.h  MemoryDriver.cpp  MemoryDriver.h  MyaiService.cpp  MyaiService.h  NodeService.cpp  NodeService.h  StatusDriver.cpp  StatusDriver.h
src/think_core/: CMakeLists.txt  CoreInclude.h  DefType.h  IOManage.h  LinkList.cpp  LinkList.h  NodeIdAllocator.cpp  NodeIdAllocator.h  NodeInfo.cpp  NodeInfo.h  ThinkCore.cpp  ThinkCore.h
src/think_core/base_type/: Graph.h  exception.h  range.h
src/think_core/inout/: IOAction.h  IOAudio.h  IOInterface.h  IOMemory.h  IOVideo.h  io_include.h
src/thread/: Coroutine.cpp  Coroutine.h  Mutex.cpp  Mutex.h  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h
src/time/: Timer.cpp  Timer.h
src/unuse/: 2_io_node.h  3_io_manage.h
src/utils/: BoundedValue.h  Exception.h  Funcation.h  Log.h  Range.h  ResourceAllocator.h  SFINAE.h
tests/: CMakeLists.txt  main.cpp  test.cpp  test_boost_test.cpp  test_config.cpp  test_coroutine.cpp  test_log.cpp  test_other.cpp
(+28 files in other folders)
